--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,11 +19,11 @@
             android:exported="false"
             android:label="@string/title_activity_login" />
         <activity
-            android:name=".ui.login.RegisterActivity"
+            android:name=".RegisterActivity"
             android:exported="false"
             android:label="@string/title_activity_register" />
         <activity
-            android:name=".MainActivity"
+            android:name=".SplashActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Pesa.NoActionBar">
