--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.pesa">
-
+    xmlns:tools="http://schemas.android.com/tools">
     <uses-permission android:name="android.permission.INTERNET" />
-
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo_transparent"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/logo_transparent"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Pesa">
-        <activity android:name=".DashboardActivity"></activity>
-        <activity android:name=".ui.login.LoginActivity" />
-        <activity android:name=".ui.login.RegisterActivity" />
-        <activity android:name=".SplashScreen"
+        android:theme="@style/Theme.Material3.Light.NoActionBar">
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
